@@ -27,13 +27,33 @@
 // This might not be true in which case we can address this at that time.
 
 /// The unsigned type used as a native "limb".
+#[cfg(not(feature = "limb32"))]
 pub type ULimb = u64;
 
+/// The unsigned type used as a native "limb".
+#[cfg(feature = "limb32")]
+pub type ULimb = u32;
+
 /// The same sized type of the limb as a signed integer.
+#[cfg(not(feature = "limb32"))]
 pub type ILimb = i64;
 
+/// The same sized type of the limb as a signed integer.
+#[cfg(feature = "limb32")]
+pub type ILimb = i32;
+
 /// An unsigned type double the width of the limb.
+#[cfg(not(feature = "limb32"))]
 pub type UWide = u128;
 
+/// An unsigned type double the width of the limb.
+#[cfg(feature = "limb32")]
+pub type UWide = u64;
+
 /// A signed type double the width of the limb.
+#[cfg(not(feature = "limb32"))]
 pub type IWide = i128;
+
+/// A signed type double the width of the limb.
+#[cfg(feature = "limb32")]
+pub type IWide = i64;
